[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 700.357
margin_right = 1022.36
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 315.0
margin_bottom = 497.0

[node name="RoomDoorSelector" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 20.0

[node name="RoomButton" type="Button" parent="PanelContainer/VBoxContainer/RoomDoorSelector"]
margin_right = 49.0
margin_bottom = 20.0
text = "Room"

[node name="PassButton" type="Button" parent="PanelContainer/VBoxContainer/RoomDoorSelector"]
margin_left = 53.0
margin_right = 94.0
margin_bottom = 20.0
text = "Pass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoorButton" type="Button" parent="PanelContainer/VBoxContainer/RoomDoorSelector"]
visible = false
margin_left = 98.0
margin_right = 141.0
margin_bottom = 20.0
text = "Door"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size Controls" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 308.0
margin_bottom = 48.0

[node name="Rows" type="LineEdit" parent="PanelContainer/VBoxContainer/Size Controls"]
margin_right = 58.0
margin_bottom = 24.0
text = "1"
caret_blink = true
caret_blink_speed = 0.5

[node name="Columns" type="LineEdit" parent="PanelContainer/VBoxContainer/Size Controls"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0
text = "1"
caret_blink = true
caret_blink_speed = 0.5

[node name="ColorPicker" type="ColorPicker" parent="PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 308.0
margin_bottom = 490.0
edit_alpha = false
